src/components/BowtieSpinner/BowtieSpinner.module.css
.canvas {
  width: 100%;
  height: 100%;
  background-color: rgb(97, 142, 83);
}

.row {
  display: flex;
  margin-bottom: 68px;
  transform: translate(-32px, -32px);
}

.rowOffset {
  transform: translate(-128px, -32px);
}

.column {
  margin-right: 128px;
}

.bowtie {
  width: 64px;
  height: 64px;
}

